--- a/post.html
+++ b/post.html
@@ -290,6 +290,9 @@
           <a class="nav-item nav-link link-body-emphasis" href="#">Politics</a>
           <a class="nav-item nav-link link-body-emphasis" href="#">Opinion</a>
           <a class="nav-item nav-link link-body-emphasis" href="#">Science</a>
+          <a class="nav-item nav-link link-body-emphasis" href="#">Health</a>
+          <a class="nav-item nav-link link-body-emphasis" href="#">Style</a>
+          <a class="nav-item nav-link link-body-emphasis" href="#">Travel</a>
         </nav>
       </div>
     </div>
@@ -297,98 +300,22 @@
     <main class="container">
       <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
         <div class="col-lg-6 px-0">
-          <h1 class="display-4 fst-italic">Welcome to IT Blog</h1>
+          <h1 class="display-4 fst-italic">
+            Title of a longer featured blog post
+          </h1>
+          <a href="#" class="text-body-emphasis fw-bold"
+              >Admin</a
+            >
           <p class="lead my-3">
-            read latest things here read latest things here read latest things
-            here read latest things here read latest things here 
-            read latest things here read latest things here read latest things
-            here read latest things here read latest things here 
+            Multiple lines of text that form the lede, informing new readers
+            quickly and efficiently about what’s most interesting in this post’s
+            contents.
           </p>
           <p class="lead mb-0">
             
           </p>
         </div>
-      </div>
-
-      <div class="row mb-2">
-        <div class="col-md-6">
-          <div
-            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
-          >
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong
-                class="d-inline-block mb-2 text-primary-emphasis"
-              ></strong>
-              <h3 class="mb-0">Technology</h3>
-              <div class="mb-1 text-body-secondary">Nov 12</div>
-              <p class="card-text mb-auto">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content.
-              </p>
-              <a href="#" class="icon-link gap-1 icon-link-hover stretched-link"
-                >Browse
-                <svg class="bi"><use xlink:href="#chevron-right" /></svg>
-              </a>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <svg
-                class="bd-placeholder-img"
-                width="200"
-                height="250"
-                xmlns="http://www.w3.org/2000/svg"
-                role="img"
-                aria-label="Placeholder: Thumbnail"
-                preserveAspectRatio="xMidYMid slice"
-                focusable="false"
-              >
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c" />
-                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-              </svg>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div
-            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
-          >
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong
-                class="d-inline-block mb-2 text-success-emphasis"
-              ></strong>
-              <h3 class="mb-0">Health</h3>
-              <div class="mb-1 text-body-secondary">Nov 11</div>
-              <p class="mb-auto">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content.
-              </p>
-              <a
-                href="#"
-                class="icon-link gap-1 icon-link-hover stretched-link"
-              >
-                Browse
-                <svg class="bi"><use xlink:href="#chevron-right" /></svg>
-              </a>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <svg
-                class="bd-placeholder-img"
-                width="200"
-                height="250"
-                xmlns="http://www.w3.org/2000/svg"
-                role="img"
-                aria-label="Placeholder: Thumbnail"
-                preserveAspectRatio="xMidYMid slice"
-                focusable="false"
-              >
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c" />
-                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-              </svg>
-            </div>
-          </div>
-        </div>
-      </div>
+    </div>
     </main>
 
     <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
