--- a/write.html
+++ b/write.html
@@ -290,103 +290,35 @@
           <a class="nav-item nav-link link-body-emphasis" href="#">Politics</a>
           <a class="nav-item nav-link link-body-emphasis" href="#">Opinion</a>
           <a class="nav-item nav-link link-body-emphasis" href="#">Science</a>
+          <a class="nav-item nav-link link-body-emphasis" href="#">Health</a>
+          <a class="nav-item nav-link link-body-emphasis" href="#">Style</a>
+          <a class="nav-item nav-link link-body-emphasis" href="#">Travel</a>
         </nav>
       </div>
     </div>
 
     <main class="container">
       <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
-        <div class="col-lg-6 px-0">
-          <h1 class="display-4 fst-italic">Welcome to IT Blog</h1>
-          <p class="lead my-3">
-            read latest things here read latest things here read latest things
-            here read latest things here read latest things here 
-            read latest things here read latest things here read latest things
-            here read latest things here read latest things here 
-          </p>
-          <p class="lead mb-0">
-            
-          </p>
-        </div>
-      </div>
-
-      <div class="row mb-2">
-        <div class="col-md-6">
-          <div
-            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label"
+            >Title of the blog</label
           >
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong
-                class="d-inline-block mb-2 text-primary-emphasis"
-              ></strong>
-              <h3 class="mb-0">Technology</h3>
-              <div class="mb-1 text-body-secondary">Nov 12</div>
-              <p class="card-text mb-auto">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content.
-              </p>
-              <a href="#" class="icon-link gap-1 icon-link-hover stretched-link"
-                >Browse
-                <svg class="bi"><use xlink:href="#chevron-right" /></svg>
-              </a>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <svg
-                class="bd-placeholder-img"
-                width="200"
-                height="250"
-                xmlns="http://www.w3.org/2000/svg"
-                role="img"
-                aria-label="Placeholder: Thumbnail"
-                preserveAspectRatio="xMidYMid slice"
-                focusable="false"
-              >
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c" />
-                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-              </svg>
-            </div>
-          </div>
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            placeholder="name@example.com"
+          />
         </div>
-        <div class="col-md-6">
-          <div
-            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label"
+            >Description of the blog</label
           >
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong
-                class="d-inline-block mb-2 text-success-emphasis"
-              ></strong>
-              <h3 class="mb-0">Health</h3>
-              <div class="mb-1 text-body-secondary">Nov 11</div>
-              <p class="mb-auto">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content.
-              </p>
-              <a
-                href="#"
-                class="icon-link gap-1 icon-link-hover stretched-link"
-              >
-                Browse
-                <svg class="bi"><use xlink:href="#chevron-right" /></svg>
-              </a>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <svg
-                class="bd-placeholder-img"
-                width="200"
-                height="250"
-                xmlns="http://www.w3.org/2000/svg"
-                role="img"
-                aria-label="Placeholder: Thumbnail"
-                preserveAspectRatio="xMidYMid slice"
-                focusable="false"
-              >
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c" />
-                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-              </svg>
-            </div>
-          </div>
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="3"
+          ></textarea>
         </div>
       </div>
     </main>
